Fixed image wrapping

--- a/src/app/card/card-image/card-image.component.css
+++ b/src/app/card/card-image/card-image.component.css
@@ -1,4 +1,5 @@
 .card-thumbnail {
+  float: left;
   width: 12em;
   padding-right: 1em;
   padding-bottom: 1em;
