--- a/src/app/destiny-grimoire.component.css
+++ b/src/app/destiny-grimoire.component.css
@@ -1,3 +1,6 @@
 .standard-card {
     margin-bottom: 12em;
+    content: '';
+    display: table;
+    clear: both;
 }
